# otus-bulk

./: .gitignore  CMakeLists.txt  CmdCollector.cpp  CmdCollector.hpp  CmdProcessor.cpp  CmdProcessor.hpp  README.md  generator.hpp  main.cpp  read_input.cpp  read_input.hpp  test.cpp
.github/workflows/: main.yml
docs/: Doxyfile
docs/html/: _cmd_collector_8cpp.html  _cmd_collector_8cpp__incl.map  _cmd_collector_8cpp__incl.md5  _cmd_collector_8hpp.html  _cmd_collector_8hpp__dep__incl.map  _cmd_collector_8hpp__dep__incl.md5  _cmd_collector_8hpp__incl.map  _cmd_collector_8hpp__incl.md5  _cmd_collector_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_cmd_collector-members.html  class_cmd_collector.html  classes.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  generator_8hpp.html  generator_8hpp__dep__incl.map  generator_8hpp__dep__incl.md5  generator_8hpp__incl.map  generator_8hpp__incl.md5  generator_8hpp_source.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md__r_e_a_d_m_e.html  menudata.js  (+21 more)
docs/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+3 more)
tests/: input1  input2
